# elm-pair

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  check-credits.sh  clippy.toml  default.nix  flake.nix  netlify.toml  publish-vscode-extension.sh  release-check.sh  watch.sh
elm-pair/: .gitignore  Cargo.toml  README.md  watch.sh
elm-pair/src/: analysis_thread.rs  compilation_thread.rs  credits.txt  editor_listener_thread.rs  main.rs
elm-pair/src/editors/: mod.rs  neovim.rs  vscode.rs
elm-pair/src/elm/: compiler.rs  dependencies.rs  file_parsing.rs  idat.rs  mod.rs  module_name.rs  project.rs  project_directory.rs  query.rs  type_checking.rs
elm-pair/src/elm/io/: mod.rs  parse_elm_json.rs  parse_elm_module.rs  parse_elm_stuff_idat.rs
elm-pair/src/elm/queries/: exports  exports.query  exports.rs  imports  imports.query  imports.rs  mod.rs  module_declaration.query  module_declaration.rs  name_definitions.query  name_definitions.rs  names_with_scopes.query  names_with_scopes.rs  qualified_values  qualified_values.query  qualified_values.rs  scopes.query  scopes.rs  unqualified_values  unqualified_values.query  unqualified_values.rs
elm-pair/src/elm/refactors/: added_constructors_to_exposing_list.rs  added_exposing_list_to_import.rs  added_module_qualifier_to_name.rs  changed_as_clause.rs  changed_module_qualifier.rs  changed_name.rs  changed_values_in_exposing_list.rs  mod.rs  removed_constructors_from_exposing_list.rs  removed_exposing_list_from_import.rs  removed_module_qualifier_from_name.rs  simulations.rs  typed_unimported_qualified_value.rs
elm-pair/src/lib/: bytes.rs  dataflow.rs  dir_walker.rs  included_answer_test.rs  intersperse.rs  log.rs  mod.rs  range.rs  simulation.rs  source_code.rs  tempdir.rs
elm-pair/src/licensing/: activate_license_neovim.txt  activate_license_vscode.txt  ed25519.public  license_expired_info.txt  licensing_info.txt  mod.rs
elm-pair/src/support/: dataflow.rs  dir_walker.rs  intersperse.rs  log.rs  mod.rs  source_code.rs
elm-pair/src/test_support/: included_answer_test.rs  simulation.rs
elm-pair/tests/: elm.json
elm-pair/tests/exports-scanning/: exposing_all.elm  exposing_minimal.elm  hiding_constructors.elm
elm-pair/tests/refactor-simulations/: add_and_remove_items_in_exposing_list.elm  add_as_clause_to_import.elm  add_module_qualifier_to_constructor_from_expose_all_import.elm  add_module_qualifier_to_record_type_alias_used_as_constructor.elm  add_module_qualifier_to_type_alias_in_type_declaration.elm  add_module_qualifier_to_type_with_same_name.elm  add_non_record_type_alias_with_same_name_as_local_constructor_to_exposing_list_of_import.elm  add_record_type_alias_to_exposing_list_of_import.elm  add_record_type_alias_with_same_name_as_local_constructor_to_exposing_list_of_import.elm  add_type_exposing_constructors_to_exposing_list.elm  add_type_to_exposing_list.elm  add_value_to_exposing_list_of_import_with_same_name_as_local_variable_and_another_with_the_same_name_plus_trailing_2.elm  add_value_to_exposing_list_with_same_name_as_local_variable.elm  change_as_clause_of_import.elm  change_constructor_name.elm  change_constructor_name_usage.elm  change_function_argument_name.elm  change_function_argument_name_to_name_used_as_other_function_argument.elm  change_lambda_argument_name.elm  change_module_qualifier_of_type.elm  change_module_qualifier_of_variable_from_unaliased_import_name.elm  change_module_qualifier_to_invalid_name.elm  change_module_qualifier_to_match_unaliased_import_name.elm  change_name_of_function_in_type_definition_in_let_binding.elm  change_name_of_top_level_function.elm  change_name_of_top_level_function_in_type_definition.elm  change_record_type_alias_name.elm  change_record_type_alias_name_constructor_usage.elm  change_record_type_alias_name_constructor_usage_to_name_that_already_exists.elm  change_record_type_alias_name_in_module_exposing_list.elm  change_record_type_alias_name_type_usage.elm  change_type_alias_name.elm  change_type_alias_name_in_module_exposing_list.elm  change_type_alias_name_usage.elm  change_type_name.elm  change_type_name_in_module_exposing_list.elm  change_type_name_usage.elm  change_variable_name_defined_as_function_argument.elm  change_variable_name_defined_as_lambda_argument.elm  change_variable_name_defined_as_top_level_function.elm  (+31 more)
elm-pair/tests/refactor-simulations/change_constructor_name_unexposed_to_other_modules/: ModuleImportingUnexposedConstructor.elm  (+2 more)
elm-pair/tests/type-checking/: Test.elm  Test2.elm  case_statement.elm  if_statement.elm  let_in_statement.elm  nested_function_calls.elm  same_name_in_different_scopes.elm
(+223 files in other folders)
