[package]
name = "elm-pair"
version = "0.1.0"
authors = ["Jasper Woudenberg <mail@jasperwoudenberg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix =  "^0.23.0"
ropey = "^1.3.1"
serde = "^1.0.130"
serde_json = "^1.0.68"
tree-sitter = "^0.19.5"
tree-sitter-elm = "^5.3.7"

[[bin]]
name = "elm-pair"
path = "src/main.rs"
