[package]
name = "elm-pair"
version = "0.1.0"
authors = ["Jasper Woudenberg <mail@jasperwoudenberg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "^1.4.3"
rmp = "^0.8.10"
ropey = "^1.3.1"
tree-sitter = "^0.19.5"
tree-sitter-elm = "^5.3.7"

[[bin]]
name = "elm-pair"
path = "src/main.rs"
