[package]
name = "elm-pair"
version = "0.1.0"
authors = ["Jasper Woudenberg <mail@jasperwoudenberg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "^1.4.3"
dirs = "^4.0.0"
libc = "^0.2.112"
rmp = "^0.8.10"
ropey = "^1.3.1"
serde = { version = "^1.0.131", features = ["derive"] }
serde_json = "^1.0.73"
tree-sitter = "^0.20.1"
tree-sitter-elm = { git = "https://github.com/jwoudenberg/tree-sitter-elm", branch = "main" }

[[bin]]
name = "elm-pair"
path = "src/main.rs"
