[package]
name = "elm-pair"
version = "0.12.0"
authors = ["Jasper Woudenberg <mail@jasperwoudenberg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abomonation = "^0.7.3"
abomonation_derive = "^0.5.0"
bimap = "^0.6.2"
byteorder = "^1.4.3"
differential-dataflow = "^0.12.0"
dirs = "^4.0.0"
libc = "^0.2.112"
notify = "^4.0.17"
rmp = "^0.8.10"
ropey = "^1.3.1"
serde = { version = "^1.0.131", features = ["derive"] }
serde_json = "^1.0.73"
timely = "^0.12.0"
tree-sitter = "^0.20.3"
tree-sitter-elm = { git = "http://github.com/jwoudenberg/tree-sitter-elm", branch = "main" }

[dev-dependencies]
tempdir = "^0.3.7"

[patch.crates-io]
abomonation = { git = "http://github.com/jwoudenberg/abomonation", branch = "master" }

[[bin]]
name = "elm-pair"
path = "src/main.rs"
