[package]
name = "elm-pair"
version = "18.0.0"
authors = ["Jasper Woudenberg <mail@jasperwoudenberg.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.13.0"
bimap = "^0.6.2"
byteorder = "^1.4.3"
differential-dataflow = "^0.12.0"
dirs = "^4.0.0"
ed25519-compact = { version = "^1.0.11", default-features = false, features = ["std"] }
libc = "^0.2.112"
notify = "^4.0.17"
rmp = "^0.8.10"
ropey = "^1.3.1"
serde = { version = "^1.0.131", features = ["derive"] }
serde_json = "^1.0.73"
timely = { version = "^0.12.0", default-features = false, features = ["bincode"] }
tree-sitter = "^0.20.3"
tree-sitter-elm = { git = "http://github.com/jwoudenberg/tree-sitter-elm", branch = "main" }

[[bin]]
name = "elm-pair"
path = "src/main.rs"
